fix graph z-index and chance

--- a/main/temp.html
+++ b/main/temp.html
@@ -51,6 +51,9 @@
 	margin-top: 10%;
 	margin-left: 10%;
 }
+.slides {
+	pointer-events: none;
+}
 		</style>
 
 		<script src="lib/js/head.min.js"></script>
